--- a/app/static/admin_interface/css/widgets.css
+++ b/app/static/admin_interface/css/widgets.css
@@ -53,15 +53,19 @@
     display: flex;
     flex-wrap: nowrap;
     white-space: nowrap;
+    max-width: 1000px;
     height: fit-content;
+    gap: 0;
 }
 /* end fix */
 
 /* fix related widget links icons size and vertical alignment */
 .admin-interface .related-widget-wrapper .related-widget-wrapper-link {
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 4px;
+    width: 34px;
+    height: 34px;
 }
 .admin-interface .related-widget-wrapper .related-widget-wrapper-link img {
     width: 16px;
@@ -77,10 +81,19 @@
 }
 /* end fix */
 
+/* fix selector chooser slide transition */
+.admin-interface .related-widget-wrapper .selector-chooser .selector-add,
+.admin-interface .related-widget-wrapper .selector-chooser .selector-remove {
+    transition: none;
+}
+/* end fix */
+
 /* fix related widget links margin from select2 (autocomplete_fields) */
+/*
 .admin-interface .related-widget-wrapper .select2-container + .related-widget-wrapper-link {
     margin-left: 12px !important;
 }
+*/
 /* end fix */
 
 /* improve responsive selector */
