--- a/app/static/admin_interface/css/changelist.css
+++ b/app/static/admin_interface/css/changelist.css
@@ -41,3 +41,9 @@
         flex-basis: content;
     }
 }
+
+/* prevent cells text wrapping */
+.admin-interface #changelist #changelist-form table tbody th,
+.admin-interface #changelist #changelist-form table tbody td {
+    white-space: nowrap;
+}
